--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,15 @@
 body {
     font-family: 'Roboto', sans-serif;
+    
 }
 
 .card {
     width:700px;
     background-color: #1e1b26;
     color: #e7e7e7;
+    box-shadow:  0px 0px 23px -2px rgba(0,0,0,0.75);
+    border-radius: 6px;
+
 }
 
 .card-contenido {
@@ -14,6 +18,8 @@ body {
 
 .card-cover {
     width: 700px;
+    border-top-left-radius:6px ;
+    border-top-right-radius: 6px;
 }
 
 .card-titulo, .card-resumen  {
